Patobulintas failų įrašymas ir nuskaitymas